# solana-dev-test-task

./: .gitignore  readme
solana-contract/: Anchor.toml
solana-contract/programs/solana-contract/: Cargo.toml
solana-contract/programs/solana-contract/src/: lib.rs
solana-contract/tests/: solana-contract.ts
solana_toolkit/: Cargo.toml  config.yaml
solana_toolkit/balance/: Cargo.toml
solana_toolkit/balance/src/: main.rs
solana_toolkit/cli/: Cargo.toml
solana_toolkit/cli/src/: main.rs
solana_toolkit/geyser/: Cargo.toml  build.rs
solana_toolkit/geyser/src/: lib.rs  main.rs  without_geyser.rs
solana_toolkit/geyser/src/proto/: geyser.proto
solana_toolkit/keypairs/: devnet.json  devnet2.json
