[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
solana-sdk = "1.18.9"
solana-client = "1.18.10"
solana-program = "1.18.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
futures = "0.3"
anyhow = "1.0"
clap = "4.0"