[package]
name = "geyser"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
solana-sdk = "1.18.9"
solana-client = "1.18.10"
# solana-program = "1.18.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
prost = "0.12"

log = "0.4"
env_logger = "0.11.8"

[build-dependencies]
tonic-build = "0.10"
# prost-build = "0.131.5"